java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam3-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateParam3
Create Parameter foo
Create Local Variable foo
